# FlashPoint

./: .env.example  .gitignore  DATA_SOURCES_UPDATE.md  FRONTEND_IMPLEMENTATION.md  README.md  conflict_sources.json  conflict_sources_list.md  docker-compose.yml  pyproject.toml  session_flashpoint.session-journal  start.sh  stop.sh
backend/: api.py  celerybeat-schedule.db  data_registry.py  geo_extractor.py  init_infra.py  main.py  pipeline.py  query_service.py  rag_pipeline.py  report_service.py  stream_writer.py  test_model.py
backend/config/: celery_config.py
backend/connectors/: acled_src.py  reddit_src.py  telegram_src.py
backend/models/: database.py  redis_client.py
backend/services/: commodity_service.py  conflict_service.py  rag_service.py  report_service.py  tracking_service.py
backend/workers/tasks/: __init__.py  commodity_worker.py  conflict_worker.py  news_worker.py  processor.py  reddit_worker.py  rss_worker.py  telegram_worker.py
data/: commodity_cache.json  conflicts.json  data_sources.json  dummy.jsonl  rss_feeds.csv
docs/: ARCHITECTURE.md  DATA_SOURCES.md  DEVELOPMENT.md  MIGRATION.md
files/: cfr_conflict_scraper.py  cfr_scraper_guide.md
frontend/themes/: preview.html  theme-blood-red.css  theme-blue.css  theme-desert-storm.css  theme-ghost-protocol.css  theme-purple.css  theme-redacted.css
frontend/web/: app.js  app.js.backup  index.html  styles.css
frontend/web/js/: chat.js  commodities.js  conflicts.js  feed.js  map.js  reports.js  utils.js
