[project]
name = "flashpoint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.134.0",
    "feedparser>=6.0.12",
    "fpdf>=1.7.2",
    "google-generativeai>=0.8.6",
    "pathway[xpack-llm,xpack-llm-local]>=0.29.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "spacy>=3.8.11",
    "telethon>=1.42.0",
    "uvicorn>=0.41.0",
]
