[project]
name = "flashpoint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "en-core-web-sm",
    "fastapi>=0.134.0",
    "feedparser>=6.0.12",
    "fpdf>=1.7.2",
    "google-genai>=1.0.0",
    "httpx>=0.28.1",
    "pathway[xpack-llm,xpack-llm-docs]>=0.29.1",
    "pdf2image>=1.17.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.3",
    "spacy>=3.8.11",
    "telethon>=1.42.0",
    "unstructured>=0.18.32",
    "uvicorn>=0.41.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
